rns-lang/tests/snapshots/error-lexer-directives-dot_dot_end.snap
---
source: jasm/tests/jasm_test.rs
expression: "&combined"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.method

..end ; not valid
----- STDERR -----
Error: unknown directive
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/jasm/test_data/integration/error/lexer/directives/dot_dot_end.ja:3:1 ]
   │
 3 │ ..end ; not valid
   │ ──┬──  
   │   ╰──── did you mean '.end' ?
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
