rns-lang/tests/snapshots/error-lexer-directives-dot_dot_super.snap
---
source: jasm/tests/jasm_test.rs
expression: "&combined"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
dot_dot_super ..super
----- STDERR -----
Error: unknown directive
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/jasm/test_data/integration/error/lexer/directives/dot_dot_super.ja:1:15 ]
   │
 1 │ dot_dot_super ..super
   │               ───┬───  
   │                  ╰───── did you mean '.super' ?
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
